Add trading, positions, watchlists, quotes & trades endpoints
